--- a/examples/react-standalone/package.json
+++ b/examples/react-standalone/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0-rc.3",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build && next export"
   },
   "dependencies": {
